--- a/ansible.iphilka.ru.conf
+++ b/ansible.iphilka.ru.conf
@@ -1,4 +1,15 @@
 server {
-    location / {
-        root /home/ansible-worker/www/stud-template/index.html;
-    }
+    listen 80;
+    # Listen to the Port 80.
+    listen [::]:80;
+    # Listen to the Port 80 under IPv6 address.
+
+    server_name ansible.iphilka.ru;
+    # Name the server block: _, localhost, IP address, or domain name.
+
+    root /home/ansible-worker/www/stud-template/;
+    # Locate the root location of web files.
+
+    index index.php index.html index.htm;
+    # Set the default index file format. Many file formats can be assigned as mentioned above.
+}
