--- a/playbook.yml
+++ b/playbook.yml
@@ -4,29 +4,67 @@
       ansible.builtin.user:
         name: ansible-worker
         shell: /bin/bash
+        group: ansible-worker
         append: yes
       become: yes
-    - name: install git
+
+    - name: Copy SSH keys ansible-worker
+      ansible.builtin.copy:
+        src: ssh_keys/
+        dest: /home/ansible-worker/.ssh/
+        owner: ansible-worker
+        group: ansible-worker
+        mode: 0600
+      become: yes
+
+    - name: Install git
       ansible.builtin.apt:
         name: git
         state: present
         update_cache: yes
-      become: yes # <---
-    - name: install nginx
+      become: yes
+
+    - name: Clone repository iphilka
+      ansible.builtin.git:
+        repo: "https://github.com/iphilka/stud-template.git"
+        dest: "/home/ansible-worker/www/stud-template"
+        update: no
+        clone: yes
+      become: yes
+
+    - name: Install nginx
       ansible.builtin.apt:
         name: nginx
         state: latest
       become: yes
-    - name: update nginx config
+    
+    - name: Update html
+      ansible.builtin.copy:
+        src: index.html
+        dest: /home/ansible-worker/www/stud-template/index.html
+        owner: ansible-worker
+        group: www-data
+        mode: u=rw,g=r,o=r
+      become: yes
+
+    - name: ansible-worker and www-data
+      ansible.builtin.shell:
+        cmd: usermod -a -G ansible-worker www-data
+      become: yes
+
+    - name: Update nginx config
       ansible.builtin.copy:
         src: ansible.iphilka.ru.conf
         dest: /etc/nginx/sites-available/ansible.iphilka.ru.conf
       notify:
-        - restart nginx
+        - Restart nginx
       become: yes
-
+    - name: Enable  ansible.iphilka.ru.conf
+      ansible.builtin.shell:
+        cmd:  ln -s /etc/nginx/sites-available/ansible.iphilka.ru.conf /etc/nginx/sites-enabled/ansible.iphilka.ru.conf
+      become: yes
   handlers:
-    - name: restart nginx
+    - name: Restart nginx
       ansible.builtin.service:
         name: nginx
         state: reloaded
